# erddap-deploy

./: .gitignore  README.md  action.yml  makefile  pyproject.toml  test-datasets-xml.yml  test.xml
.github/workflows/: predeloyment-checks.yaml  test-action.yaml  test-package.yaml
actions/: update.yml
actions/monitor/: action.yaml
actions/remote/monitor/: action.yml
actions/remote/update/: action.yml
actions/test/: action.yml
actions/update/: action.yml
erddap_checks/: __init__.py  __main__.py  erddap.py  test_datasets.py  test_erddap_datasets.py  test_erddap_requirements.py
erddap_deploy/: __init__.py  __main__.py  cli.py  erddap.py  log.py  monitor.py  sync.py  test.py  test_datasets.py
erddap_deploy/templates/: events.html  status.html
erddap_deploy/tests/: test_datasets.py  test_erddap_deployment.py
monitor/: action.yml
sync/: action.yml
test/: action.yml
tests/: test_commands.py  test_erddap_xml.py  test_log.py
tests/data/: datasets.xml
tests/data/datasets.d/: dataset1.xml  dataset2.xml  dataset3.xml  users.xml
tests/data/datasets.d/subdir/: dataset4.xml
tests/data/logs/: log.txt  logArchivedAt2024-02-07T19.46.35.txt
